header & footer 组件基本样式

--- a/src/assets/common.less
+++ b/src/assets/common.less
@@ -14,7 +14,7 @@ html, body, #app {
 .el-button {
   color: @themeColor;
   border: 1px solid @themeLighterColor;
-  background: none;
+  background: #fff;
   border-radius: 4px;  
 }
 
@@ -24,7 +24,6 @@ html, body, #app {
   font-weight: normal;
   line-height: 28px;
 }
-
 
 .el-button:hover {
   color: #fff;
