--- a/src/assets/common.less
+++ b/src/assets/common.less
@@ -10,6 +10,36 @@ html, body, #app {
   height: 100%;
 }
 
+// * {
+//   margin: 0;
+//   padding: 0;
+// }
+
+* {
+  box-sizing: border-box;
+}
+
+*::after {
+  box-sizing: border-box;
+}
+
+*::before {
+  box-sizing: border-box;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+input {
+  font: inherit;
+}
 
 .el-button {
   color: @themeColor;
