完成 登錄註冊功能

--- a/src/assets/common.less
+++ b/src/assets/common.less
@@ -60,6 +60,18 @@ input {
   background-color: @themeLighterColor;
 }
 
+input {
+  line-height: 38px;
+  border: 1px solid #eaeaea;
+  padding: 0 10px;
+  border-radius: 4px;
+  outline: none;
+}
+
+input:focus {
+  border-color: @themeLighterColor;
+}
+
 .el-input.is-active .el-input__inner, .el-input__inner:focus, .el-textarea__inner:focus {
   border-color: @themeLighterColor;
 }
