--- a/src/pages/Login/template.less
+++ b/src/pages/Login/template.less
@@ -16,6 +16,7 @@
 
   input {
     width: 400px;
+    margin-bottom: 5px;
   }
 
   .error {
@@ -24,7 +25,7 @@
   }
 
   button {
-    margin-top: 10px;
+    margin-top: 20px;
     justify-self: start;
   }
 
