添加首页功能

--- a/src/pages/Index/template.less
+++ b/src/pages/Index/template.less
@@ -29,7 +29,7 @@
       grid-column: 2;
       grid-row: 1;
 
-      &>span {
+      & > span {
         color: @textLighterColor;
         font-size: 12px;
         font-weight: normal;
@@ -42,6 +42,11 @@
       margin-top: 0;
     }
   }
-  
+
+  .pagination {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+  }
   
 }
