--- a/src/pages/Index/template.less
+++ b/src/pages/Index/template.less
@@ -12,7 +12,8 @@
       text-align: center;
       justify-self: center;
       margin-left: 0;
-
+      cursor: pointer;
+      
       img {
         width: 60px;
         height: 60px;
